# nucleusdb

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  install.sh  lake-manifest.json  lakefile.lean
.agents/: CALIBRATION.md  CREDO.md  ONTOLOGY.md
.agents/skills/mcp-transport/: SKILL.md  mcp-transport.kg.md
.agents/skills/memory-recall/: SKILL.md  memory-recall.kg.md
.agents/skills/skill-authoring/: SKILL.md  skill-authoring.kg.md
.agents/skills/skill-maintenance/: SKILL.md  skill-maintenance.kg.md
.claude/skills/: mcp-transport
.gemini/skills/: memory-recall  skill-maintenance
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
Docs/: ARCHITECTURE.md
artifacts/kzg/: demo-trusted-setup-v1.json
configs/: proof_gate.json
dashboard/: app.js  index.html  style.css
deploy/: discord.env.example  entrypoint.sh  install.sh  nucleusdb-dashboard.service  nucleusdb-discord.service  nucleusdb-mcp.service
lean/: NucleusDB.lean
lean/NucleusDB/: Comms.lean  Genesis.lean
lean/NucleusDB/Adversarial/: ByzantineTolerance.lean  ForkEvidence.lean
lean/NucleusDB/Bridge/: MessageModelSeq.lean
lean/NucleusDB/Commitment/: Adapter.lean  VectorModel.lean
lean/NucleusDB/Comms/: AccessControl.lean  DIDComm.lean  Identity.lean  Mesh.lean  Privacy.lean  Protocol.lean
lean/NucleusDB/Contracts/: Model.lean
lean/NucleusDB/Core/: Certificates.lean  EpistemicTrust.lean  EvidenceFusion.lean  Ledger.lean  NaturalTransformation.lean  Nucleus.lean  SealChain.lean
lean/NucleusDB/Genesis/: Bridge.lean  Entropy.lean  LawvereBridge.lean  Noneist.lean  (+1 more)
licenses/: Apoth3osis-Public-Good-License-1.0.md  Apoth3osis-Small-Business-License-1.0.md
scripts/: capture_proof_explorer_gif.py  check_lean_rust_correspondence.sh  extract_proof_graph.py  mcp_streamable_http.py
src/: api.rs  audit.rs  blob_store.rs  chebyshev_evictor.rs  config.rs  crypto_scope.rs  did.rs  embeddings.rs  encrypted_file.rs  genesis.rs  governor.rs  hash.rs  http_client.rs  identity.rs  identity_ledger.rs  immutable.rs  keymap.rs  lib.rs  license.rs  materialize.rs  memory.rs  multitenant.rs  password.rs  persistence.rs  pq.rs  protocol.rs  security.rs  security_utils.rs  state.rs  type_map.rs  typed_value.rs  util.rs  vault.rs  vector_index.rs  witness.rs
src/cli/: mod.rs  repl.rs
src/commitment/: mod.rs
src/dashboard/: api.rs  assets.rs  mod.rs
src/discord/: commands.rs  config.rs  handler.rs  mod.rs  recorder.rs  schema.rs  status.rs
src/mcp/: tools.rs
src/sheaf/: coherence.rs  mod.rs
src/sql/: executor.rs  schema.rs
src/transparency/: ct6962.rs  mod.rs
src/trust/: composite_cab.rs  mod.rs  onchain.rs
src/tui/: app.rs
src/vc/: binary_merkle.rs  ipa.rs  kzg.rs  mod.rs
src/verifier/: checker.rs  gate.rs  mod.rs
tests/: cli_smoke_tests.rs  discord_tests.rs  end_to_end.rs  keymap_tests.rs  persistence_compat_tests.rs  sql_tests.rs
(+119 files in other folders)
